@@ -1,4 +1,3 @@
-http://forum.sqlitestudio.pl/viewtopic.php?f=11&t=1051
 http://forum.sqlitestudio.pl/viewtopic.php?f=11&t=1053
 
 - VACUUM - synchronicznie?! bez indykatora?
